--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start",
     "lint": "next lint",
     "json-server": "json-server -w db.json -p 5000",
-    "serve": "concurrently \"npm run dev\" \"npm run json-server\""
+    "serve": "concurrently \"npm run dev\" \"npm run json-server\"",
+    "prisma:push": "prisma db push",
+    "prisma:studio": "prisma studio"
   },
-  "dependencies": {
+  "dependencies"
+  : {
+    "@prisma/client": "^6.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -18,6 +22,7 @@
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.460.0",
     "next": "14.2.16",
+    "prisma": "^6.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-horizontal-scrolling": "^0.1.13",
